--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -1,3 +1,7 @@
+##########
+# Global #
+##########
+
 [global]
 #client min protocol = SMB2
 #client max protocol = SMB3
@@ -15,120 +19,46 @@ dns proxy = no
 #preferred master = yes
 #os level = 255
 
-# dos charset = CP850
 unix charset = UTF-8
 dos charset = ISO8859-1
-# unix charset = ISO8859-1
-# display charset = ISO8859-1
 mangled names = no
 read raw = Yes
 write raw = Yes
-# socket options = TCP_NODELAY IPTOS_LOWDELAY SO_RCVBUF=8192 SO_SNDBUF=8192
-#socket options = TCP_NODELAY IPTOS_LOWDELAY SO_RCVBUF=131072 SO_SNDBUF=131072
-min receivefile size = 16384
-use sendfile = true
-aio read size = 16384
-aio write size = 16384
 
-# Auditory and Recycle Bin!
+#################
+# Audit Modules #
+#################
 
-# vfs:0 Make Directory, Remove Directory, Unlink
-# vfs:1 Open Directory, Rename File, Change Permissions/ACLs
-# vfs:2 Open & Close File
-# vfs:10 Maximum Debug Level
+vfs objects = recycle, full_audit, acl_xattr, dfs_samba4
+store dos attributes = yes
+map acl inherit = yes
 
-vfs objects = full_audit
 audit:failure = none
 full_audit:success = unlinkat renameat
-#pwrite pwrite_send pwrite_recv write renameat unlinkat mkdir
-#open, opendir, write, unlinkat, renameat, mkdir, rmdir, chmod, chown
 full_audit:prefix = IP=%I|USER=%u|MACHINE=%m|VOLUME=%S
-
 log level = 0 vfs:0
-syslog = 0
 
-#####################
-# COMPARTILHAMENTOS #
-#####################
+#syslog = 0
+recycle:repository = /PATH/TO/Lixeira/%U
+recycle:keeptree = yes
+recycle:versions = yes
+recycle:touch = Yes
+recycle:touch_mtime = yes
+recycle:noversions = *.tmp,*.temp,*.o,*.obj,*.TMP,*.TEMP
+recycle:exclude = *.tmp,*.temp,*.o,*.obj,*.TMP,*.TEMP
+recycle:excludedir = PATH/TO/Lixeira,/recycle,/tmp,/temp,/TMP,/TEMP
 
-# Backup
+##################
+# Shared Folders #
+##################
 
-[backup]
-path = /mnt/cluster04/Backup
-valid users = admin
-admin users = admin
+[shared]
+path = /mnt/FOLDER
+valid users = USER
+admin users = USER
 guest ok = no
 writable = yes
 browsable = yes
-
-create mask = 0777
-force create mode = 0777
-directory mask = 0777
-force directory mode = 0777
-
-##################
-# Discos Avulsos #
-##################
-
-[cluster01]
-path = /mnt/cluster01/Shared
-valid users = administrador
-admin users = administrador
-guest ok = no
-writable = yes
-browsable = no
-create mask = 0777
-force create mode = 0777
-directory mask = 0777
-force directory mode = 0777
-
-[cluster02]
-path = /mnt/cluster02/Shared
-valid users = administrador
-admin users = administrador
-guest ok = no
-writable = yes
-browsable = no
-create mask = 0777
-force create mode = 0777
-directory mask = 0777
-force directory mode = 0777
-
-[cluster03]
-path = /mnt/cluster03/Shared
-valid users = administrador
-admin users = administrador
-guest ok = no
-writable = yes
-browsable = no
-create mask = 0777
-force create mode = 0777
-directory mask = 0777
-force directory mode = 0777
-
-[cluster04]
-path = /mnt/cluster04/Shared
-valid users = administrador
-admin users = administrador
-guest ok = no
-writable = yes
-browsable = no
-create mask = 0777
-force create mode = 0777
-directory mask = 0777
-force directory mode = 0777
-
-##############
-# Particular #
-##############
-
-[particular]
-path = /mnt/cluster02/Particular
-valid users = nathan
-admin users = nathan
-guest ok = no
-writable = yes
-browsable = no
 create mask = 0777
 force create mode = 0777
 directory mask = 0777
