--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -53,9 +53,9 @@ recycle:excludedir = PATH/TO/Lixeira,/recycle,/tmp,/temp,/TMP,/TEMP
 ##################
 
 [shared]
-path = /mnt/FOLDER
-valid users = USER
-admin users = USER
+path = /mnt/shared
+valid users = ubuntu
+admin users = ubuntu
 guest ok = no
 writable = yes
 browsable = yes
