--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -6,8 +6,8 @@
 #client min protocol = SMB2
 #client max protocol = SMB3
 
-server string = NOVO
-netbios name = novo
+server string = Shared
+netbios name = shared
 workgroup = WORKGROUP
 
 security = user
@@ -29,7 +29,7 @@ write raw = Yes
 # Audit Modules #
 #################
 
-vfs objects = recycle, full_audit, acl_xattr, dfs_samba4
+vfs objects = recycle, full_audit, acl_xattr
 store dos attributes = yes
 map acl inherit = yes
 
@@ -39,14 +39,14 @@ full_audit:prefix = IP=%I|USER=%u|MACHINE=%m|VOLUME=%S
 log level = 0 vfs:0
 
 #syslog = 0
-recycle:repository = /PATH/TO/Lixeira/%U
+recycle:repository = /mnt/shared/Lixeira/%U
 recycle:keeptree = yes
 recycle:versions = yes
 recycle:touch = Yes
 recycle:touch_mtime = yes
 recycle:noversions = *.tmp,*.temp,*.o,*.obj,*.TMP,*.TEMP
 recycle:exclude = *.tmp,*.temp,*.o,*.obj,*.TMP,*.TEMP
-recycle:excludedir = PATH/TO/Lixeira,/recycle,/tmp,/temp,/TMP,/TEMP
+recycle:excludedir = /mnt/shared/Lixeira,/recycle,/tmp,/temp,/TMP,/TEMP
 
 ##################
 # Shared Folders #
