--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -53,7 +53,7 @@ recycle:excludedir = /mnt/shared/Lixeira,/recycle,/tmp,/temp,/TMP,/TEMP
 ##################
 
 [shared]
-path = /mnt/shared
+path = /mnt
 valid users = ubuntu
 admin users = ubuntu
 guest ok = no
